--- a/mreview/src/main/resources/application.properties
+++ b/mreview/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
 spring.thymeleaf.cache=false
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=/Users/ondd
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=10MB
