--- a/mreview/src/main/resources/application.properties
+++ b/mreview/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.location=/Users/ondd/temp
 spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
-org.zerock.upload.path = /Users/ondd/temp
+org.zerock.upload.path =/Users/ondd/temp/upload
